  recommended, preferably with ongoing vendor support).
* Changed: Pending articles may be displayed on the site.
* Fixed: Remove 'br' tags from article image markup where >1 image is
  supplied (thanks, jools-r).
* Added: <txp:if_article_status /> tag.
* Added: Latest text translations. Thank you to all our translators.
* Added: Filter articles by image.
* Added: 'exclude' attribute to <txp:images />.
* Changed: Enhancements to 'br' tag HTML5 compliance (thanks, jools-r).
* Changed: Enhancements to SVG handling relating to non-px dimensions
  (thanks, jools-r).
* Changed: Enhancements to 'extension' and 'size' attributes of <txp:images />.
* Changed: Theme page maximum size increased from 64KB to 16MB.
* Changed: Admin-theme checksums computed independently. Unused admin themes
  can be deleted and will no longer trigger Diagnostics alert.
* Changed: Checksums use Tiger-192,3 instead of MD5. Fewer potential clashes.
* Developer: Permitted concurrent logins. See Advanced Prefs.
* Developer: Removed duplicate pluggable_ui callback for
  article_ui›categories (thanks, jools-r).
* Developer: Added pophelp support in plugin 'lang' directory.
* Developer: Articles (list) panel callbacks:
    articles>fields and articles>from to manipulate the query
    articles>controls to affect the button area
    articles_ui>list.row (pluggable_ui) for adding table data
    articles>steps for plugins to register custom panel-level functionality.
* Vendors: DOMPurify 3.3.0.
* Vendors: PHPMailer 6.12.0.

Changes in 4.9.0-beta.2 (14 Mar 2025)

* Added: Full article previews directly from the Write panel.
* Added: Site status values to 'process' attribute of <txp:hide />.
* Added: 'inline' value to 'format' attribute of <txp:css /> (thanks, jools-r).
* Added: 'target' attribute to <txp:popup />.
* Added: 'match', 'separator' attribute capability to <txp:if_yield />.
* Added: Ability to serve files via 'type' attribute to <txp:file_download />.